# ForestSight

./: .replit  app.py  pyproject.toml  test_app.py
.streamlit/: config.toml  styles.css
attached_assets/: Pasted--p-style-color-1b5e20-font-size-1-15rem-margin-15px-auto-30px-auto-max--1743074541459.txt
components/: action.py  action_fixed.py  analysis.py  download.py  global_map.py  header.py  realtime_mapping.py  statistics.py  time_series.py  timelapse.py  upload.py
data/: sample_coordinates.py
utils/: image_processing.py  mapping.py  visualization.py
